--- a/captura/index.html
+++ b/captura/index.html
@@ -25,7 +25,7 @@
                     </div>
                     <div class="form">
                          <form>
-                            <input type="text" placeholder="Digite seu e-email"  autofocus="autofocus"/>
+                            <input type="text" placeholder="Digite seu e-email"  />
                             <button>Cadastrar</button>
                         </form>   
                     </div>
@@ -38,7 +38,7 @@
                 </div>  
 
                 <div class="rightside">
-                        ...               
+                     <div class="rightside-linear"></div>   
                 </div>
             </div>            
         </div>    
@@ -63,10 +63,67 @@
                     </p>
                 </div>
             </div>
+
+            <div class="inst--item">
+                <div class="inst--circle"></div>
+                <div class="inst--text">
+                    <h2>O que precisa para assistir?</h2>
+                    <p>
+                        Só precisa ter uma conexão de internet e vontade de aprender, o resto deixa com o professor que ele te ensina.
+                    </p>
+                </div>
+            </div>
+
+            <div class="inst--item">
+                <div class="inst--circle"></div>
+                <div class="inst--text">
+                    <h2>E se eu não puder assistir às 9:30 da manhã?</h2>
+                    <p>
+                        Todas as aulas ficam gravadas e você pode assistir em qualquer outro horário. 
+                    </p>
+                </div>
+            </div>
+
+            <div class="inst--item">
+                <div class="inst--circle"></div>
+                <div class="inst--text">
+                    <h2>Qual o nível das aulas?</h2>
+                    <p>
+                        Nas aulas o professor vai abordar assuntos de diferentes níveis, mas sempre com o maior foco no iniciante, explicando didaticamente os conceitos e exemplos. Sempre com assuntos e aprendizados novos pra você.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="cta">
+        <div class="cta-container">
+            <div class="cta--left">
+                <h2>
+                    Deseja participar?
+                </h2>
+                <p>
+                    Informe seu e-mail na página e será avisado de todas as aulas.
+                </p>
+            </div>
+            <div class="cta--right">
+                <form>
+                    <input type="text" placeholder="Digite seu e-email"/>
+                    <button>Cadastrar</button>
+                </form>   
+            </div>
         </div>
     </section>
     <footer>
-        ...
+        <div class="footer-container">
+            <div class="footer-left">
+                <a href="./"> <img src="assets/images/Logo.png" alt="" /> </a>
+            </div>
+            <div class="footer-right">
+                Todos os direitos reservados.<br/>
+                <a href="https://b7web.com.br/termos">Termos de uso e privacidade</a>
+            </div>   
+        </div>
     </footer>
 </body>
 
